# fixdec

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
benches/: bench_d128.rs  bench_d64.rs  bench_d96.rs  bench_f64.rs  bench_rust_decimal.rs  bench_serde.rs
src/: d128.rs  d64.rs  d96.rs  lib.rs
