[package]
name = "fixdec"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", optional = true }
thiserror = "2.0.17"

[features]
default = []
alloc = []
std = ["alloc"]
serde = ["dep:serde", "alloc"]
full = ["std", "serde"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rust_decimal = { version = "1.39.0", features = ["maths", "serde"] }
proptest = "1.9.0"
serde = "1.0.228"
serde_json = "1.0.145"
bincode = "1.3"

[profile.bench]
opt-level = 3           # Maximum optimizations (default)
lto = true              # Link-time optimization (optional, makes builds slower but binaries faster)
codegen-units = 1       # Better optimization (optional, slower build)
debug = false           # No debug info (default)

[[bench]]
name = "bench_d64"
harness = false

[[bench]]
name = "bench_d96"
harness = false

[[bench]]
name = "bench_f64"
harness = false

[[bench]]
name = "bench_rust_decimal"
harness = false

[[bench]]
name = "bench_serde"
harness = false
required-features = ["serde"]
