[package]
name = "fixdec"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-performance fixed-point decimal types for financial calculations and cryptocurrency"
repository = "https://github.com/Abso1ut3Zer0/fixdec"
rust-version = "1.89.0"
readme = "README.md"
keywords = ["decimal", "fixed-point", "finance", "cryptocurrency", "no-std"]
categories = ["mathematics", "no-std", "data-structures"]
exclude = [
    ".github/",
    ".idea/",
    ".editorconfig",
    ".gitignore",
    "CONTRIBUTING.md",
]

[dependencies]
serde = { version = "1.0.228", optional = true }
thiserror = "2.0.17"

[features]
default = []
alloc = []
std = ["alloc"]
serde = ["dep:serde", "alloc"]
full = ["std", "serde"]

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
rust_decimal = { version = "1.39.0", features = ["maths", "serde"] }
proptest = "1.9.0"
serde = "1.0.228"
serde_json = "1.0.145"
bincode = "1.3"

[profile.bench]
opt-level = 3           # Maximum optimizations (default)
lto = true              # Link-time optimization (optional, makes builds slower but binaries faster)
codegen-units = 1       # Better optimization (optional, slower build)
debug = false           # No debug info (default)

[[bench]]
name = "bench_d64"
harness = false

[[bench]]
name = "bench_d96"
harness = false

[[bench]]
name = "bench_f64"
harness = false

[[bench]]
name = "bench_rust_decimal"
harness = false

[[bench]]
name = "bench_serde"
harness = false
required-features = ["serde"]
